# pra2do

./: README.md
pra2do/: example.pl  pra2do.pl
pra2do-terminal/: Cargo.toml  pra2do.toml
pra2do-terminal/src/: config.rs  main.rs  parser.rs
