[package]
name = "pra2do-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
nom = "7.1.1"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.9"
shlex = "1.1.0"
css-color-parser = "0.1.2"